package usantatecla.tictactoe.views.graphics;

import usantatecla.tictactoe.controllers.Logic;
import usantatecla.tictactoe.views.View;

public class GraphicsView extends View {

    public GraphicsView(Logic logic) {
        super(logic);
    }

    @Override
    public void start() {
    }

    @Override
    public void play() {
    }

    @Override
    public boolean resume() {
        return true;
    }

}
